--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.26",
+    "gsap": "^3.14.2",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
+    "svg-path-parser": "^1.1.0",
     "tailwind-merge": "^2.3.0"
   },
   "devDependencies": {
